Fixed: label overlapping input field

--- a/css/style.css
+++ b/css/style.css
@@ -93,27 +93,73 @@ header {
 
 /* ------------- */
 
-.wrapper{
-    position:relative;
+.wrapper {
+    position: relative;
     width: 400px;
-    height:440px;
+    height: 440px;
     background: transparent;
-    border: 2px solid rgba(255,255,255,.5);
-    border-radius:20px;
+    border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 20px;
     backdrop-filter: blur(20px);
-    box-shadow: 0 0 30px rgba(0,0,0, .5);
-    display:flex;
-    justify-content:center;
-    align-items:center;
+    box-shadow: 0 0 30px rgba(0, 0, 0, .5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.wrapper .form-box{
-    width:100%;
-    padding:40px;
+.wrapper .form-box {
+    width: 100%;
+    padding: 40px;
 }
 
-.form-box h2{
-    font-size:2em;
+.form-box h2 {
+    font-size: 2em;
     color: #fff;
-    text-align:center;
+    text-align: center;
+}
+
+.input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid #fff;
+    margin: 30px 0;
+}
+
+.input-box label {
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1em;
+    color: #fff;
+    font-weight: 500;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.input-box input:focus~label,
+.input-box input:valid~label,
+.input-box input:not(:placeholder-shown)~label {
+    top: -5px;
+}
+
+.input-box input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    color: #fff;
+    font-weight: 600;
+    padding: 0 35px 0 5px;
+}
+
+.input-box .icon {
+    position: absolute;
+    right: 8px;
+    font-size: 1.2em;
+    color: #fff;
+    line-height: 57px;
 }
